src/objects/AddressBook__c.object
<CustomObject>
    <fields>
        <fullName>abAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Address Books</relationshipLabel>
        <relationshipName>Address_Books</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>abAddressLine__c</fullName>
        <formula>IF(NOT(ISBLANK(abStreet1__c)),abStreet1__c,&quot;&quot;) +
IF(NOT(ISBLANK(abStreet2__c) ), &quot;, &quot;&amp;abStreet2__c,&quot;&quot;) +
IF(NOT(ISBLANK(abCity__c)),&quot;, &quot;&amp;abCity__c,&quot;&quot;) +
IF(NOT(ISBLANK(abStateProvince__c)),&quot;, &quot;&amp;abStateProvince__c,&quot;&quot;) +
IF(NOT(ISBLANK(abPostalCode__c)),&quot;, &quot;&amp;abPostalCode__c,&quot;&quot;) +
IF(NOT(ISBLANK(TEXT(abCountry__c))),&quot;, &quot;&amp;TEXT(abCountry__c),&quot;&quot;)</formula>
        <label>Address Line</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abAssetRecordIdentifierKey__c</fullName>
        <label>Asset Record Identifier Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abCity__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abCountry__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brunei Darussalam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bulgaria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Burkina Faso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cambodia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cameroon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>abDescription__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abPostalCode__c</fullName>
        <label>Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abStateProvince__c</fullName>
        <label>State/Province</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abStreet1__c</fullName>
        <label>Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abStreet2__c</fullName>
        <label>Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>abUniqueField__c</fullName>
        <formula>CASESAFEID(abAccount__r.Id) + &apos;_&apos; +
abStreet1__c + &apos;_&apos; +
abStreet2__c + &apos;_&apos; +
abCity__c + &apos;_&apos; +
abStateProvince__c + &apos;_&apos; +
TEXT(abCountry__c) + &apos;_&apos; +
abPostalCode__c</formula>
        <label>Unique Field</label>
        <type>Text</type>
    </fields>
    <label>Address Book</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>AB-{00000000}</displayFormat>
        <label>Address Book Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Address Books</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>